# railway-station-api

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
conf/: permissions.py  settings.py  urls.py
station/: admin.py  models.py  serializers.py  urls.py  views.py
station/migrations/: 0001_initial.py  0002_initial.py  0003_remove_trainmodel_unique_cargo_num_places_in_cargo_and_more.py  0004_stationmodel_image_trainmodel_image.py
station/tests/: test_models.py  test_train_api.py  test_train_type_api.py
station/tests/tests_api/: test_crew_api.py  test_crews_api.py  test_helpers.py  test_journey_api.py  test_order_and_tickets.py  test_route_api.py  test_station_api.py  test_train_api.py  test_train_type_api.py
user/: admin.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_and_more.py
